# grpc-bench

./: .gitignore  20p.tsv  23p.tsv  BENCHMARK_HISTORY.md  Cargo.toml  FINDINGS.md  MACOS.md  PRECISION.md  PROTO.md  README.md  RUNBOOK.md  build.rs  dex-programs.tsv  pump-only.tsv  sanity-programs.tsv
scripts/: setup-linux.sh
src/: config.rs  crossstream.rs  env.rs  lib.rs  programs.rs  proto.rs  raw.rs  run.rs  stability.rs  summary.rs
src/collect/: mod.rs  ring.rs
src/matching/: accounts.rs  blocks.rs  mod.rs  slots.rs  transactions.rs
src/subscribe/: mod.rs  yellowstone.rs
src/timing/: kernel_ts.rs  mod.rs
tests/: integration.rs
